# ScienceWorld-MAS

./: .gitattributes  .gitignore  LICENSE  README.md  agent_protocol.py  audit_contract_sft.py  audit_expert_subtask_contract_sft.py  audit_minimal_contract_sft.py  audit_multisquare.py  collect_expert_minimal_rollouts.py  collect_kimi_mas_rollouts.py  contract_schema.py  doctor.py  environment.yml  eval_episodes.py  eval_metrics.py  evaluate_environment.py  evaluate_sft.py  generate_contract_sft_data.py  generate_expert_subtask_contract_sft.py  generate_minimal_contract_sft_data.py  generate_sft_data.py  generate_sft_from_kimi_rollouts.py  id_ood_split.py  mgrpo_batch.py  mgrpo_objective.py  mgrpo_trainer.py  prepare_expert_minimal_sft.py  prepare_multisquare.py  provenance.py  pyproject.toml  requirements.txt  rollout_schema.py  scienceworld_data.py  scienceworld_env.py  scienceworld_rewards.py  sft_trainer.py  trajectory_alignment.py
artifacts/: EXPERIMENT_REPORT.md  RECENT_DATA_SFT_REPORT.md  V7_CONTRACT_RL_REPORT.md
docs/: BENCH_PROTOCOL.md  CONTRACT_DISTILLATION.md  CONTRACT_SFT_PIPELINE_EVOLUTION.md  ENVIRONMENT_SMOKE_REPORT.md  L1_STEP_RL_AND_DATA_REPORT.md  MGRPO_DESIGN.md  MRLX_LIKE_MGRPO_NOTES.md  NATIVE_KIMI_ROLLOUTS.md  REPRODUCIBILITY.md  SFT_PILOT_REPORT.md  V2_PROJECT_STRUCTURE.md
l1/: README.md  __init__.py  config.py  eval.py  main_prompt.py  protocol.py  reward.py  rollout.py  states.py  trainer.py
plan_a/: README.md  __init__.py  generate_sft_data.py  schema.py
scripts/: analyze_id_ood_eval.py  generate_stratified_eval.sh  l1_continue.sh  (+23 more)
(+92 files in other folders)
