[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scienceworld-mas"
version = "0.2.0"
description = "Bench-faithful ScienceWorld hierarchical-agent baseline."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]
testpaths = [
  "tests"
]
